k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dredge
  labels:
    name: dredge
    app: dredge-cli
